# Stonefish-Ros2-Workspace

./: .gitignore  =0.9.11  Readme.md  bag2csv.py  calc.py  dvl_position.csv  generate_simple_net_blender.py  imu.csv  keypoints.txt  list_topics.py  make_keypoints.ipynb  test.ipynb  usbl.csv
blender_scripts/: generate_net_2d_blender.py  generate_net_blender.py
custom_keypoint_paths/: keypoints.txt  make_keypoints.ipynb
custom_keypoint_paths/saves/: Path_to_Erik.txt  Pure_dvl_experiment_1.txt
plots/: create_plots.ipynb
plots/csv_data/: depth.csv  depth_sim.csv  dvl_sim.csv  dvl_sim_solid_net_model.csv  dvl_velocity.csv  ground_truth.csv
sintef_dataset_ros2_bag_fixed/: metadata.yaml  sintef_dataset_ros2_bag_fixed.db3
src/listener/: package.xml  setup.py
src/listener/launch/: dvl_logger.launch.py
src/sensors/: CMakeLists.txt  package.xml
src/sensors/msg/: BatteryStatus.msg  ControllerManager.msg  ControllerManager1DOF.msg  DVLPosition.msg  DepthTemperature.msg  Extreme3D.msg  GuidanceManager.msg  HeartBeat.msg  IMU.msg  Joystick.msg  MRACO.msg  MRACOupdate.msg  ModeManager.msg  ModeManager2.msg  NetFollowingManager.msg  Nucleus1000_ahrs.msg  Nucleus1000_altimeter.msg  Nucleus1000_imu.msg  Nucleus1000_ins.msg  Nucleus1000_magnetometer.msg  Nucleus1000_watertrack.msg  PIDState.msg  Ping.msg  Ping360.msg  Ping360_config.msg  Ping360_config_2.msg  Ping360_fishcage.msg  Ping360_init_params.msg  Ping_config.msg  PixhawkData.msg  PlaneApproximation.msg  PlaneApproximationPosition.msg  SonardyneUSBL.msg  SonardyneUSBL2.msg  SonoptixConfig.msg  SonoptixConfig2.msg  SonoptixECHO.msg  VehicleStatus.msg
src/simulator/: CMakeLists.txt  package.xml
src/stonefish_bluerov2/: CMakeLists.txt  package.xml
src/stonefish_bluerov2/launch/: sim.py
src/stonefish_bluerov2/scenarios/: bluerov2_robot.scn  bluerov2_robot_animated.scn  scenario1.scn
src/uuv_teleop/: package.xml  setup.cfg  setup.py
tools/: convert_ros1_pkg.py  tools.py
(+7 files in other folders)
