<?xml version="1.0"?>
<package format="3">
  <name>stonefish_bluerov2</name>
  <version>0.0.1</version>
  <description>BlueROV2 scenario and launch files for Stonefish ROS2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>stonefish_ros2</exec_depend>

  <!-- trengs for launch-filer -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
